k8s/src/resources/pikaraoke/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pikaraoke
spec:
  replicas: 1
  template:
    spec:
      volumes:
        - name: "pikaraoke"
          persistentVolumeClaim:
            claimName: pikaraoke-pvc
      containers:
        - name: pikaraoke
          image: vicwomg/pikaraoke:latest
          imagePullPolicy: Always
          args:
            - -l10
            - -u $(URL)
            - -v 1
            # - --admin-password $(PIKARAOKE_ADMIN_PASSWORD)
          volumeMounts:
            - name: pikaraoke
              mountPath: /app/pikaraoke-songs
          ports:
            - name: svc-5555-http
              containerPort: 5555
          resources:
            limits:
              memory: "256Mi"
              cpu: "50m"
            requests:
              memory: "80Mi"
              cpu: "5m"
          startupProbe:
            httpGet:
              path: /
              port: 5555
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5555
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5555
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
